--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-iframe-click": "^2.0.2",
+    "react-lazy-load-image-component": "^1.5.3",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
