--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-iframe-click": "^2.0.2",
     "react-lazy-load-image-component": "^1.5.3",
+    "react-player": "^2.10.0",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
